--- a/drag-window/__drag-window.html
+++ b/drag-window/__drag-window.html
@@ -17,75 +17,75 @@ span{color:#ff0;padding-left:5px;}
 <script type="text/javascript">
 window.onload=function(){
 	var oBox=document.getElementById('box');
-	var oA=oBox.getElementsByTagName('a')[0];
 	var oH2=oBox.getElementsByTagName('h2')[0];
 	var aSpan=oBox.getElementsByTagName('span');
-	var disX=disY=0;
+	var oA=oH2.getElementsByTagName('a')[0];
+	var i=disX=disY=0;
 	var bDrag=false;
-	var aPos=[{x:oBox.offsetLeft,y:oBox.offsetTop}];
+	aSpan[0].innerHTML=false;
+	aPos=[{x:oBox.offsetLeft,y:oBox.offsetTop}];
 
 	oH2.onmousedown=function(event){
-		var event=event || window.event;
-		bDrag = true;
-		//获取鼠标相对div的位置
-		disX = event.clientX-oBox.offsetLeft;
-		disY = event.clientY-oBox.offsetTop;
-
+		var event= event || window.event;
+		bDrag=true;
+		disX=event.clientX-oBox.offsetLeft;
+		disY=event.clientY-oBox.offsetTop;
 		aPos.push({x:oBox.offsetLeft,y:oBox.offsetTop})
-
-		
 		return false;
 	}
-	//这里的是document而不是oH2，重要，否则的话鼠标移出浏览器再移入会有bug
-	document.onmousemove=function(){
-		//bDrag为false的话执行直接中断
+	//这里是document而不是oH2，重要，否则的话鼠标移出浏览器再移入会有bug
+	document.onmousemove=function(event){
+		var event= event || window.event;
 		if(!bDrag) return;
-		var event = event || window.event;
+		
+		oBox.style.marginTop=0;
+		oBox.style.marginLeft=0;
 		var iL=event.clientX-disX;
 		var iT=event.clientY-disY;
-		//确定box可移动范围
-		var maxL = document.documentElement.clientWidth - oBox.offsetWidth;
-		var maxT = document.documentElement.clientHeight - oBox.offsetHeight;
-		iL = iL <0 ? 0 : iL;
-		iL = iL >maxL ? maxL:iL;
-		iT = iT <0 ? 0 : iT;
-		iT = iT >maxT ? maxT : iT;
-		oBox.style.marginTop = oBox.style.marginLeft=0;
-		oBox.style.left= iL+'px';
-		oBox.style.top= iT+'px';
+		var maxWidth=document.documentElement.clientWidth;
+		var maxHeight=document.documentElement.clientHeight;
+		iL = iL<0 ? 0 : iL; 
+		iL = iL >maxWidth-oBox.offsetWidth ? (maxWidth-oBox.offsetWidth) : iL
+		iT = iT<0 ? iT=0 : iT;
+		iT = iT >maxHeight-oBox.offsetHeight ? (iT=maxHeight-oBox.offsetHeight) : iT;
+		oBox.style.left=iL+'px';
+		oBox.style.top=iT+'px';
+		aSpan[0].innerHTML=true;
 		//鼠标每move一次便push一次
 		aPos.push({x:iL,y:iT});
-		status();
+		status()
 		return false;
 	}
-	document.onmouseup=window.onblur=oH2.onloseCpture=function(){
+	document.onmouseup=function(){
 		bDrag=false;
-		
 		status();
 	}
-	oA.onclick=function(){
-		if(aPos.length == 1) return;
-		var timer = setInterval(function(){
+	oA.onclick=function(event){
+		if (aPos.lenght == 1) return;
+		var timer=setInterval(function(){
 			var oPos=aPos.pop();
-			oPos ? (oBox.style.left = oPos.x + 'px',oBox.style.top=oPos.y +'px',status()): clearInterval(timer)
-		},10);
-		this.focus = false;
-		return false;
+			if(oPos){
+				oBox.style.left=oPos.x+'px';
+				oBox.style.top=oPos.y+'px';
+				//回退时也监听位置数据
+				status()
+			}else{
+				clearInterval(timer)
+			}
+		},5)
 	}
-	//阻止冒泡
+	//去除冒泡
 	oA.onmousedown=function(event){
-		var event=event|| window.event;
+		var event= event || window.event;
 		event.cancelBubble=true;
 	}
-	function status ()
-	{
-		aSpan[0].innerHTML = bDrag;
-		aSpan[1].innerHTML = oBox.offsetTop;
-		aSpan[2].innerHTML = oBox.offsetLeft
+	//监听位置数据
+	function status(){
+		aSpan[0].innerHTML=bDrag;
+		aSpan[1].innerHTML=oBox.offsetTop;
+		aSpan[2].innerHTML=oBox.offsetLeft;
 	}
-	
-	//初始调用
-	status()
+	status();
 }
 </script>
 </head>
