--- a/Lesson 7/loading-picture/_loading-picture.html
+++ b/Lesson 7/loading-picture/_loading-picture.html
@@ -20,7 +20,9 @@ body{font:12px/1.5 \5fae\8f6f\96c5\9ed1;background:#000;}
 #btn_R{right:10px;background-position:-39px 0;}
 </style>
 <script type="text/javascript">
-
+window.onload=function(){
+	
+}
 </script>
 </head>
 <body>
