--- a/Lesson 8/drag-window/drag-window.html
+++ b/Lesson 8/drag-window/drag-window.html
@@ -6,12 +6,12 @@
 <title>窗口拖拽（改变大小/最小化/最大化/还原/关闭）</title>
 <style type="text/css">
 body,div,h2{margin:0;padding:0;}
-body{background:url(img/bg.jpg);font:12px/1.5 \5fae\8f6f\96c5\9ed1;color:#333;}
+body{background:url(http://fgm.cc/learn/lesson8/img/bg.jpg);font:12px/1.5 \5fae\8f6f\96c5\9ed1;color:#333;}
 #drag{position:absolute;top:100px;left:100px;width:300px;height:160px;background:#e9e9e9;border:1px solid #444;border-radius:5px;box-shadow:0 1px 3px 2px #666;}
 #drag .title{position:relative;height:27px;margin:5px;}
 #drag .title h2{font-size:14px;height:27px;line-height:24px;border-bottom:1px solid #A1B4B0;}
 #drag .title div{position:absolute;height:19px;top:2px;right:0;}
-#drag .title a,a.open{float:left;width:21px;height:19px;display:block;margin-left:5px;background:url(img/tool.png) no-repeat;}
+#drag .title a,a.open{float:left;width:21px;height:19px;display:block;margin-left:5px;background:url(http://fgm.cc/learn/lesson8/img/tool.png) no-repeat;}
 a.open{position:absolute;top:10px;left:50%;margin-left:-10px;background-position:0 0;}
 a.open:hover{background-position:0 -29px;}
 #drag .title a.min{background-position:-29px 0;}
@@ -23,7 +23,7 @@ a.open:hover{background-position:0 -29px;}
 #drag .title a.close{background-position:-89px 0;}
 #drag .title a.close:hover{background-position:-89px -29px;}
 #drag .content{overflow:auto;margin:0 5px;}
-#drag .resizeBR{position:absolute;width:14px;height:14px;right:0;bottom:0;overflow:hidden;cursor:nw-resize;background:url(img/resize.png) no-repeat;}
+#drag .resizeBR{position:absolute;width:14px;height:14px;right:0;bottom:0;overflow:hidden;cursor:nw-resize;background:url(http://fgm.cc/learn/lesson8/img/resize.png) no-repeat;}
 #drag .resizeL,#drag .resizeT,#drag .resizeR,#drag .resizeB,#drag .resizeLT,#drag .resizeTR,#drag .resizeLB{position:absolute;background:#000;overflow:hidden;opacity:0;filter:alpha(opacity=0);}
 #drag .resizeL,#drag .resizeR{top:0;width:5px;height:100%;cursor:w-resize;}
 #drag .resizeR{right:0;}
