--- a/Lesson 10/move-box/__move-box.html
+++ b/Lesson 10/move-box/__move-box.html
@@ -11,48 +11,48 @@ body,div{margin:0;padding:0;}
 .box span{position:absolute;top:10px;left:10px;width:20px;height:20px;background:#999;display:block;opacity:1;}
 </style>
 <script type="text/javascript">
-var Animate = function (oElement, options, callback) {
+//创建构造器Animate
+var Animate = function (oElement, option, callback) {
 	this.initialize.apply(this, arguments)
 }
+//对象字面量法,构造器原型配置
 Animate.prototype = {
+	//原型里的构造器：initialize
 	initialize: function (oElement, options, callback) {
 		var oThis = this;
 		this.options = options;
 		this.callback = callback;
 		this.oElement = typeof oElement === 'string' ? document.getElementById(oElement) : oElement;
 		clearInterval(this.timer);
-		this.timer = setInterval(function () {
+		this.timer = setInterval (function() {
 			oThis.doMove()
 		},30)
 	},
 	css: function (attr, value) {
-		//style获取的兼容性处理
 		if (arguments.length == 1) {
-			return parseFloat(this.oElement.currentStyle ? this.oElement.currentStyle[attr] : getComputedStyle(this.oElement, null)[attr])
+			return parseFloat (this.oElement.currentStyle ? this.oElement.currentStyle : getComputedStyle(this.oElement, null)[attr])
 		}
-		//opacity的兼容性处理
-		else if(arguments.length == 2) {
-			attr == "opacity" ? (this.oElement.style.filter = "alpha(opacity=" + value + ")", this.oElement.style.opacity = value / 100) : this.oElement.style[attr] = value + "px";
+		else if (arguments.length == 2) {
+			attr == "opacity" ? (this.oElement.style.filter = "alpha(opacity=" + value + ")", this.oElement.style.opacity = value / 100) : this.oElement.style[attr] = value + 'px';
 		}
 	},
 	doMove: function () {
 		var opt = this.options;
 		var bComplete = true;
-		for (var p in opt) {
-			var iCur = p == "opacity" ? parseInt(this.css(p).toFixed(2) * 100) : this.css(p);
-			var iSpeed = (opt[p] - iCur) /5;
-			iSpeed = iSpeed > 0 ? Math.ceil(iSpeed) : Math.floor(iSpeed);
-			opt[p] == iCur || (bComplete = false, this.css(p, iCur + iSpeed))
+	}
+	for (var p in opt) {
+		var iCur = p == "opacity" ? parseInt(this.css(p).toFixed(2) * 100) : this.css(p);
+		var iSpeed = (opt[p] - iCur) /5;
+		iSpeed = iSpeed > 0 ? Math.ceil(iSpeed) : Math.floor(iSpeed);
+		opt[p] == iCur || (bComplete = false, this.css(p, iCur + iSpeed))
 		}
 		bComplete && (clearInterval(this.timer), this.callback && this.callback.call(this))
 	}
 };
 
-	//对象的使用
 window.onload = function () {
 	var oSpan = document.getElementsByTagName('span')[0];
 	var oInput = document.getElementsByTagName('input')[0];
-	//配置运动路径
 	var aData = [
 		{width:20, height:20},
 		{width:80, height:80},
@@ -73,30 +73,19 @@ window.onload = function () {
 	var bOrder = true;
 	var i = 0;
 	oInput.disabled = false;
-	//按钮点击事件
 	oInput.onclick = function () {
 		var oThis = this;
 		oThis.disabled = true;
-		function begin() {
+		function begin () {
 			bOrder ? i++ : i--;
 			var obj = new Animate(oSpan, aData[i], begin);
-			if (i == aData.length || i < 0) {
+			if (i == aData.length || i < 0){
 				clearInterval(obj.timer);
 				bOrder = !bOrder;
-				oThis.value = bOrder ? "\u5f00\u59cb" : "\u539f\u8def\u8fd4\u56de";
-				oThis.disabled = false;
-				return
 			}
 		}
-		begin();
-	};
-	//去除按钮虚线
-	oInput.onfocus = function () {
-		this.blur();
 	}
-
 }
-
 </script>
 </head>
 <body>
