--- a/Lesson 10/move-box/move-box.html
+++ b/Lesson 10/move-box/move-box.html
@@ -12,6 +12,7 @@ body,div{margin:0;padding:0;}
 </style>
 <script type="text/javascript">
 //面向对象版运动框架
+//用此法(apply方法)可向新对象的方法里传参
 var Animate = function (oElement, options, callback) {this.initialize.apply(this, arguments)};
 
 Animate.prototype = {
@@ -23,14 +24,17 @@ Animate.prototype = {
 		this.oElement = typeof oElement === "string" ? document.getElementById(oElement) : oElement;
 		clearInterval(this.timer);
 		this.timer = setInterval(function ()
-		{
+		{	
+			//这里用oThis，否则用this的话指代的是window
 			oThis.doMove()
 		}, 30)
 	},
 	css: function (attr, value)
-	{
+	{	
+		//长度1时读style，2时写style
 		if (arguments.length == 1)
 		{
+			//这里用currentStyle或getComputedStyle获取style而不是offset方法
 			return parseFloat(this.oElement.currentStyle ? this.oElement.currentStyle[attr] : getComputedStyle(this.oElement, null)[attr])
 		}
 		else if (arguments.length == 2)
@@ -44,6 +48,7 @@ Animate.prototype = {
 		var bComplete = true;		
 		for (var p in opt)
 		{
+			//获取当前位置style数据
 			var iCur = p == "opacity" ? parseInt(this.css(p).toFixed(2) * 100) : this.css(p);
 			var iSpeed = (opt[p] - iCur) / 5;
 			iSpeed = iSpeed > 0 ? Math.ceil(iSpeed) : Math.floor(iSpeed);
@@ -81,10 +86,12 @@ window.onload = function ()
 	//按钮点击事件(开始/返回)
 	oInput.onclick = function ()
 	{
+		//用oThis获取事件的target
 		var oThis = this;
 		oThis.disabled = true;
 		function begin()
 		{			
+			console.log(this)
 			bOrder ? i++ : i--;
 			var obj = new Animate(oSpan, aData[i], begin);			
 			if (i == aData.length || i < 0)
